OnlineCourseSpringProjectApplication verbeterd